# XXCNC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  plan.md  vcpkg.json
.github/workflows/: ci.yml  code-quality.yml  release.yml
examples/: test.nc
src/: CMakeLists.txt  main.cpp
src/core/: CoreController.cpp  README.md  test.gcode
src/core/gcode/: CoordinateSystem.cpp  CoordinateSystem.h  GCodeCommands.h  GCodeExecutor.cpp  GCodeExecutor.h  GCodeMacro.cpp  GCodeMacro.h  GCodeMacroManager.cpp  GCodeMacroManager.h  GCodeParser.cpp  ToolCompensation.cpp  ToolCompensation.h
src/core/motion/: Axis.cpp  AxisController.cpp  InterpolationEngine.cpp  InterpolationEngine.h  MotionController.cpp  TimeBasedInterpolator.cpp
src/core/web/: CMakeLists.txt  WebServer.cpp
src/core/web/static/: index.html  styles.css  test.nc  test_button.html  trajectory.html  upload_test.html
src/core/web/static/js/: main.js  stats.min.js  trajectory-viewer.js
src/include/xxcnc/: types.h
src/include/xxcnc/core/: CoreController.h
src/include/xxcnc/core/gcode/: GCodeCommands.h  GCodeMacro.h  GCodeMacroManager.h  GCodeParser.h
src/include/xxcnc/core/motion/: InterpolationEngine.h  TimeBasedInterpolator.h
src/include/xxcnc/core/web/: MockWebAPI.h  RealWebAPI.h  WebAPI.h  WebServer.h  WebTypes.h
src/include/xxcnc/motion/: Axis.h  AxisController.h  MotionController.h
src/include/xxcnc/web/: WebServer.h  WebTypes.h
static/: index.html
tests/: CMakeLists.txt
tests/core/: CoreControllerTest.cpp  GCodeParserTest.cpp  InterpolationEngineTest.cpp
tests/core/gcode/: GCodeMacroManagerTest.cpp
tests/core/motion/: AxisControllerTest.cpp  AxisTest.cpp
tests/core/web/: WebServerTest.cpp
